<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.BluetoothWifiActivity">

    <TextView
        android:id="@+id/tvWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/wifi"
        android:textColor="@color/purple"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/tvBluetooth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIsWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/blueClearDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvWifi"
        app:layout_constraintStart_toStartOf="@+id/tvWifi"
        app:layout_constraintTop_toBottomOf="@+id/tvWifi" />

    <TextView
        android:id="@+id/tvBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth"
        android:textColor="@color/purple"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvWifi"
        app:layout_constraintTop_toTopOf="@+id/tvWifi" />

    <TextView
        android:id="@+id/tvIsBluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/blueClearDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvBluetooth"
        app:layout_constraintStart_toStartOf="@+id/tvBluetooth"
        app:layout_constraintTop_toBottomOf="@+id/tvBluetooth" />

    <Button
        android:id="@+id/btNextB"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/blueClearDark"
        android:onClick="onClick"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>