<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clRegister"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_white_border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILName"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="55dp"
                android:hint="@string/name"
                android:textColorHint="@color/purple"
                app:boxBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etxName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences"
                    android:textColor="@color/purple"
                    android:textSize="14sp"
                    android:theme="@style/TextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILId"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="55dp"
                android:hint="@string/id"
                android:textColorHint="@color/purple"
                app:boxBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tILName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etxId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences"
                    android:textColor="@color/purple"
                    android:textSize="14sp"
                    android:theme="@style/TextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILAddress"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="55dp"
                android:hint="@string/address"
                android:textColorHint="@color/purple"
                app:boxBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tILId">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etxAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences"
                    android:textColor="@color/purple"
                    android:textSize="14sp"
                    android:theme="@style/TextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILCity"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="55dp"
                android:hint="@string/city"
                android:textColorHint="@color/purple"
                app:boxBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tILAddress">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etxCity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences"
                    android:textColor="@color/purple"
                    android:textSize="14sp"
                    android:theme="@style/TextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILCountry"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="55dp"
                android:hint="@string/country"
                android:textColorHint="@color/purple"
                app:boxBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tILCity">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etxCountry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textCapSentences"
                    android:textColor="@color/purple"
                    android:textSize="14sp"
                    android:theme="@style/TextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tILPhone"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="55dp"
                android:hint="@string/phone"
                android:textColorHint="@color/purple"
                app:boxBackgroundColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tILCountry">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etxPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:textColor="@color/purple"
                    android:textSize="14sp"
                    android:theme="@style/TextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btNextF"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/blueClearDark"
                android:text="@string/next"
                android:textAllCaps="false"
                android:onClick="onClick"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tILPhone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
